@startuml k8s_operator_class_diagram

' CRD定义
class CollectionTask {
  **Spec:**
  + Name: string
  + Schedule: string
  + CollectorType: enum
  + DataSource: DataSourceRef
  + Processor: ProcessorConfig
  + Storage: StorageConfig
  + RetryPolicy: RetryConfig
  + ConcurrencyPolicy: enum
  --
  **Status:**
  + Phase: enum
  + Conditions: []Condition
  + LastScheduleTime: time
  + LastSuccessTime: time
  + LastFailureTime: time
  + LastExecutionSummary: ExecutionSummary
  + ObservedGeneration: int64
}

class DataSource {
  **Spec:**
  + Type: enum (Web/API/Database)
  + ConnectionConfig: map
  + AuthConfig: AuthInfo
  + RateLimitConfig: RateLimit
  --
  **Status:**
  + Phase: enum
  + ConnectionStatus: enum
  + LastTestTime: time
}

class CleaningRule {
  **Spec:**
  + Name: string
  + TargetFields: []string
  + Rules: []RuleDefinition
  + ValidationRules: []Validator
  --
  **Status:**
  + Active: bool
  + LastAppliedTime: time
}

class TaskExecution {
  **PostgreSQL表: task_executions**
  + id: UUID
  + cr_uid: string
  + task_id: int64
  + status: enum (running/success/failed)
  + start_time: timestamp
  + end_time: timestamp
  + worker_pod: string
  + records_fetched: int
  + records_stored: int
  + error_message: text
  + retry_count: int
}

' Controller结构
class CollectionTaskReconciler {
  + Client: client.Client
  + Scheme: *runtime.Scheme
  + Recorder: record.EventRecorder
  + DBClient: *sql.DB
  --
  + Reconcile(ctx, req): Result
  - syncCRToDB(): error
  - syncDBToStatus(): error
  - updateStatus(): error
  - handleDeletion(): error
}

' 关系
CollectionTask "1" --> "0..1" DataSource : references
CollectionTask "1" --> "0..*" CleaningRule : uses
CollectionTask "1" --> "0..*" TaskExecution : tracks

CollectionTaskReconciler ..> CollectionTask : reconciles
CollectionTaskReconciler ..> DataSource : watches
CollectionTaskReconciler ..> CleaningRule : watches
CollectionTaskReconciler ..> TaskExecution : syncs

note right of CollectionTask
  核心CRD: 采集任务定义
  - 定时/手动触发
  - 关联数据源和规则
  - 配置同步到PostgreSQL
end note

note right of CollectionTaskReconciler
  Operator核心控制器
  - list-watch机制
  - Reconcile循环
  - syncCRToDB(): CR → PostgreSQL
  - syncDBToStatus(): PostgreSQL → CR.Status
  - 幂等性保证
end note

note right of TaskExecution
  PostgreSQL存储
  - Worker轮询获取任务
  - 分布式锁(FOR UPDATE SKIP LOCKED)
  - 执行记录持久化
end note

@enduml
